@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-12T08:20:53Z",
-  "count_outdated" : 383,
-  "uniques_outdated" : 221,
-  "count" : 415,
+  "timestamp" : "2022-07-12T16:21:13Z",
+  "count_outdated" : 385,
+  "uniques_outdated" : 222,
+  "count" : 417,
   "uniques" : 240,
   "clones" : [
-    {
-      "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-29T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
