@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-29T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-07-12T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
