@@ -1,3 +1,10 @@
+2022-07-12T16:21:13Z:
+* notice: last 14d: unq all: 5 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 221 383 / 240 415
+* notice: next accum: outdated-unq outdated-all / unq all: 222 385 / 240 417
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-28] / [2022-07-12]
+
 2022-07-12T08:20:53Z:
 * notice: last 14d: unq all: 5 32
 * notice: prev accum: outdated-unq outdated-all / unq all: 221 383 / 239 415
